# vcpkg_junk

./: .clang-format  CMakeLists.txt  CMakeUserPresets.json  vcpkg.json
07_cmake_qt/: CMakeLists.txt
08_assimp_junk/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  cmd_aiscene_bounding_box.cpp  cmd_pnts_decoder.cpp  cmd_tinygltf_bounding_volume.cpp  test_assimp.cpp  test_cesium_geometry_error.cpp  test_draco.cpp  test_draco.h  vcpkg.json
08_assimp_junk/test_data/GM13206_test.tb_1_tiles/: README.txt  index-debug.html  index.html
08_assimp_junk/test_data/cesium/pnts/: 0-draco.glb  0-draco.pnts  0.glb  0.pnts  README.txt
11_vs/: .gitignore  11_vs.sln  CLAUDE.md  CMakeLists.txt  README.md  remove_win32.py  vcpkg.json
11_vs/cmd_app1/: CMakeLists.txt  main.cpp
11_vs/cmd_boost_rtree_primer/: CMakeLists.txt  README.md  cmd_boost_rtree_primer.cpp  cmd_boost_rtree_primer.vcxproj  cmd_boost_rtree_primer.vcxproj.filters
11_vs/cmd_boost_rtree_traversal/: cmd_boost_rtree_traversal.vcxproj
11_vs/cmd_boost_rtree_view_example/: cmd_boost_rtree_view_example.cpp  cmd_boost_rtree_view_example.vcxproj
11_vs/cmd_cesium_3d_tiles_pointcloud/: cmd_cesium_3d_tiles_pointcloud.cpp  cmd_cesium_3d_tiles_pointcloud.vcxproj
11_vs/cmd_fmt_example/: CMakeLists.txt  cmd_fmt_example.vcxproj
11_vs/cmd_mem_allocate/: cmd_mem_allocate.c  cmd_mem_allocate.vcxproj
11_vs/cmd_octree_primer/: CMakeLists.txt  cmd_octree_primer.cpp  cmd_octree_primer.vcxproj
11_vs/cmd_pcl_octree_primer/: cmd_pcl_octree_primer.cpp  cmd_pcl_octree_primer.vcxproj  cmd_pcl_octree_primer.vcxproj.filters
11_vs/cmd_rtree_primer/: CMakeLists.txt  cmd_rtree_primer.cpp  cmd_rtree_primer.vcxproj  cmd_rtree_primer.vcxproj.filters
11_vs/cmd_simple_boost_rstar_example/: CMakeLists.txt  cmd_simple_boost_rstar_example.cpp  cmd_simple_boost_rstar_example.vcxproj
11_vs/cmd_sombrero_elevation_generator/: cmd_sombrero_elevation_generator.cpp  cmd_sombrero_elevation_generator.vcxproj  cmd_sombrero_elevation_generator.vcxproj.filters
11_vs/cmd_tree_from_inside_predicate/: CMakeLists.txt  cmd_tree_from_inside_predicate.cpp  cmd_tree_from_inside_predicate.vcxproj  cmd_tree_from_inside_predicate.vcxproj.filters  vcpkg.json
11_vs/test_unicode_filenames/: test_unicode_filenames.cpp  test_unicode_filenames.vcxproj  test_unicode_filenames.vcxproj.filters  vcpkg.json
11_vs/test_unsorted/: CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  README.txt  main.cpp  test_unsorted.h  test_unsorted.vcxproj  test_unsorted.vcxproj.filters  virtual_base_test.cpp  virtual_base_test_plain.h  virtual_base_test_virt.h
12_cgal/: CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  cmd_cgal_2.cpp  cmd_cgal_3.cpp  cmd_cgal_4.cpp  cmd_cgal_5.cpp  cmd_cgal_6.cpp  cmd_cgal_example1.cpp  test_12.cpp  vcpkg.json
13_assimp_dynamic/: .editorconfig  CMakeLists.txt  CMakeUserPresets.json  README.md  test_assimp.cpp  vcpkg.json
14_vulkan_primer/: CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  SHADER_COMPILATION.md  compile_shaders.bat  vcpkg.json  vulkan_app.cpp  vulkan_cube.cpp  vulkan_triangle.cpp
15_mesh_3d_tiles/: CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  test_mesh_3d_tiles.cpp  vcpkg.json
15_mesh_3d_tiles/data/tb_2/: actual.glb
15_mesh_3d_tiles/data/tb_3/: actual.glb
